--- a/ckanext/cioos_theme/templates/package/base.html
+++ b/ckanext/cioos_theme/templates/package/base.html
@@ -9,18 +9,14 @@
 {% block breadcrumb_content %}
   {% if pkg %}
     {% set dataset = h.dataset_display_name(pkg) %}
-    {#
-    {% if pkg.organization %}
+    {% if pkg.organization and g.hide_organization_in_breadcrumb.lower() != 'true' %}
       {% set organization = h.get_translated(pkg.organization, 'title') or pkg.organization.name %}
       {% set group_type = pkg.organization.type %}
       <li>{% link_for _('Organizations'), controller='organization', action='index', named_route=group_type + '_index' %}</li>
       <li>{% link_for organization|truncate(30), controller='organization', action='read', id=pkg.organization.name, named_route=group_type + '_read' %}</li>
     {% else %}
-    #}
       <li>{% link_for _('Datasets'), controller='package', action='search' %}</li>
-    {#
     {% endif %}
-    #}
     <li{{ self.breadcrumb_content_selected() }}>{% link_for dataset|truncate(30), controller='package', action='read', id=pkg.name %}</li>
   {% else %}
     <li>{% link_for _('Datasets'), controller='package', action='search' %}</li>
