--- a/ckanext/cioos_theme/templates/package/base.html
+++ b/ckanext/cioos_theme/templates/package/base.html
@@ -9,7 +9,7 @@
 {% block breadcrumb_content %}
   {% if pkg %}
     {% set dataset = h.dataset_display_name(pkg) %}
-    {% if pkg.organization and g.hide_organization_in_breadcrumb.lower() != 'true' %}
+    {% if pkg.organization and g.hide_organization_in_breadcrumb.lower()|default('', 'false')  != 'true' %}
       {% set organization = h.get_translated(pkg.organization, 'title') or pkg.organization.name %}
       {% set group_type = pkg.organization.type %}
       <li>{% link_for _('Organizations'), controller='organization', action='index', named_route=group_type + '_index' %}</li>
