--- a/ckanext/cioos_theme/templates/atlantic_header.html
+++ b/ckanext/cioos_theme/templates/atlantic_header.html
@@ -45,6 +45,7 @@
       </li>
       <li id="menu-item-2002" class="menu-item"><a href="{{ g.site_home_url }}fr/ressources/"><span>Ressources</span></a>
       </li>
+      {%- endif -%}
       <ul class="shareicons">
         {{ include_site_social() }}
         <li>
