--- a/ckanext/cioos_theme/public/pacific.css
+++ b/ckanext/cioos_theme/public/pacific.css
@@ -142,11 +142,19 @@
   background: rgba(17, 81, 114, 0.2);
 }
 
-#footer #footer-col1, #footer #footer-col2 {
+#footer #footer-col1{
   width: 25%;
 }
+
+#footer #footer-col2 {
+  width: 15%;
+}
+
 
 #topmenu i.fa-facebook {
   font-size: 12px;
 }
-/*# sourceMappingURL=pacific.css.map */
+
+#footer #footer-col3, #footer #footer-col4 {
+  width: auto;
+}
