fix multiple issues
fix cioos-siooc/ckan#64
add a `ckan.index_xml_url_read_timeout` ckan config setting and timeout to urllib2.urlopen. Defaults to 500ms. config setting should be set in milliseconds even though urlib expects it in seconds
fix cioos-siooc/ckan#77
fix cioos-siooc/ckan#63
clean up lint issues
fix cioos-siooc/ckan#70
fix cioos-siooc/ckan#79

--- a/ckanext/cioos_theme/templates/base.html
+++ b/ckanext/cioos_theme/templates/base.html
@@ -32,6 +32,9 @@
     {%- block styles %}
       {% resource g.main_css[6:] %}
       <link rel="stylesheet" type="text/css" href="{{h.url_for_static('/cioos_theme.css')}}" />
+      {% if h.cioos_get_additional_css_path() %}
+      <link rel="stylesheet" type="text/css" href="{{h.url_for_static(h.cioos_get_additional_css_path())}}" />
+      {% endif %}
       <link href="https://fonts.googleapis.com/css?family=Montserrat:400,600,700,800,900|Quicksand:300,400,600|PT+Sans:400|Raleway:400&display=swap" rel="stylesheet">
     {% endblock %}
 
