--- a/ckanext/cioos_theme/templates/pacific_footer.html
+++ b/ckanext/cioos_theme/templates/pacific_footer.html
@@ -7,7 +7,7 @@
 					</h3>
 					<div class="textwidget">
 						<p>
-							<a href="mailto:info@cioospacific.ca">info@cioospacific.ca</a>
+							<a href="mailto:{{ h.cioos_contact_email() }}">{{ h.cioos_contact_email() }}</a>
 						</p>
 					</div>
 				</aside>
