--- a/ckanext/cioos_theme/templates/atlantic_footer.html
+++ b/ckanext/cioos_theme/templates/atlantic_footer.html
@@ -7,12 +7,12 @@
 					</h3>
 					<div class="textwidget">
 						<p>
-							<a href="mailto:info@cioospacific.ca">info@cioospacific.ca</a>
+							<a href="mailto:info@cioos.ca">info@cioos.ca</a>
 						</p>
 					</div>
 				</aside>
 			</div>
-			<div id="footer-col2" class="widget-area one_third">
+			<div id="footer-col2" class="widget-area one_sixth">
 				<aside class="widget widget_text">
 					<h3 class="footer-widget-title">
 						<span>CIOOS</span>
@@ -24,44 +24,50 @@
 									<a href="https://www.cioos.ca/">CIOOS National</a>
 								</div>
 								<div class="textwidget custom-html-widget">
-									<a href="#">Pacific Region</a>
+									<a href="https://cioospacific.ca">Pacific Region</a>
 									<br>
-									<a href="https://new.ogsl.ca/en/home/">St. Lawrence Region</a>
+									<a href="https://ogsl.ca/en/">St. Lawrence Region</a>
 									<br>
-									<a href="https://cioosatlantic.ca/">Atlantic Region</a>
+									<a href="https://cioosatlantic.ca">Atlantic Region</a>
 								</div>
 							</aside>
 						</div>
 					</div>
 				</aside>
 			</div>
-			<div id="footer-col3" class="widget-area last one_half width_auto">
+			<div id="footer-col3" class="widget-area one_sixth"><aside class="widget_text widget widget_custom_html"><h3 class="footer-widget-title"><span>DATA</span></h3><div class="textwidget custom-html-widget"><a href="https://dev.cioosatlantic.ca/ckan">Catalogue</a><br>
+<a href="https://dev.cioosatlantic.ca/">Asset Map</a></div></aside>
+			</div>
+
+			<div id="footer-col4" class="widget-area last one_half">
 				<aside class="widget_text widget widget_custom_html">
 					<h3 class="footer-widget-title">
 						<span>SUBSCRIBE TO CIOOS VIA EMAIL</span>
 					</h3>
 					<div class="textwidget custom-html-widget">
+						<!-- Begin Mailchimp Signup Form -->
 						<div id="mc_embed_signup">
-							<form action="https://cioos.us4.list-manage.com/subscribe/post?u=878a48e5216df1dd94addb795&amp;id=a3c7b19b1e" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate="">
-								<div id="mc_embed_signup_scroll">
-									<div id="mce-responses" class="clear">
-										<div class="response" id="mce-error-response" style="display:none"></div>
-										<div class="response" id="mce-success-response" style="display:none"></div>
-									</div>
-									<div class="subcribe_container">
-										<div style="position: absolute; left: -5000px;" aria-hidden="true">
-											<input type="text" name="b_bbfb1b3442ef6556f2c6cdfff_da0cc8ed40" tabindex="-1" value="">
-										</div>
-										<div class="mc-field-group email">
-											<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="Email Address">
-										</div>
-										<div class="clear">
-											<input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="subscribe">
-										</div>
-									</div>
-								</div>
-							</form>
+    							<form action="https://cioosatlantic.us19.list-manage.com/subscribe/post?u=70e43ded9ed1212de9f9d02fc&amp;id=b6549cddce" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+        							<div class="mc-input-fields">
+            								<div class="mc-field-group">
+                								<label for="mce-FNAME">First Name</label>
+                								<input type="text" value="" name="FNAME" class="" id="mce-FNAME">
+            								</div>
+            							<div class="mc-field-group">
+                							<label for="mce-EMAIL">Email Address <span class="mc-required">(required)</span></label>
+                							<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
+            							</div>
+        						</div>
+        						<div id="mce-responses" class="clear">
+            							<div class="response" id="mce-error-response" style="display:none"></div>
+            							<div class="response" id="mce-success-response" style="display:none"></div>
+        						</div>
+        						<!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+        						<div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_70e43ded9ed1212de9f9d02fc_b6549cddce" tabindex="-1" value=""></div>
+        						<input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button">
+    							</form>
 						</div>
+						<!--End mc_embed_signup-->
 					</div>
 				</aside>
 			</div>
