Updated Atlantic footer catalogue hyperlink.

--- a/ckanext/cioos_theme/templates/atlantic_footer.html
+++ b/ckanext/cioos_theme/templates/atlantic_footer.html
@@ -35,8 +35,10 @@
 					</div>
 				</aside>
 			</div>
-			<div id="footer-col3" class="widget-area one_sixth"><aside class="widget_text widget widget_custom_html"><h3 class="footer-widget-title"><span>DATA</span></h3><div class="textwidget custom-html-widget"><a href="https://dev.cioosatlantic.ca/ckan">Catalogue</a><br>
-<a href="https://dev.cioosatlantic.ca/">Asset Map</a></div></aside>
+			<div id="footer-col3" class="widget-area one_sixth"><aside class="widget_text widget widget_custom_html">
+			<h3 class="footer-widget-title"><span>DATA</span></h3>
+			<div class="textwidget custom-html-widget"><a href="https://catalogue.dev.cioosatlantic.ca">Catalogue</a><br>
+			<a href="https://dev.cioosatlantic.ca/">Asset Map</a></div></aside>
 			</div>
 
 			<div id="footer-col4" class="widget-area last one_half">
