--- a/ckanext/cioos_theme/templates/atlantic_footer.html
+++ b/ckanext/cioos_theme/templates/atlantic_footer.html
@@ -1,17 +1,18 @@
 {% macro include_site_footer() %}
   {% block footer_core %}
 			<div id="footer-col1" class="widget-area one_sixth">
-				<aside class="widget widget_text">
+				<aside class="widget_text widget widget_custom_html">
 					<h3 class="footer-widget-title">
 						<span>CONTACT US</span>
 					</h3>
-					<div class="textwidget">
-						<p>
-							<a href="mailto:info@cioos.ca">info@cioos.ca</a>
-						</p>
+					<div class="textwidget custom-html-widget">
+						<a href="https://twitter.com/cioos_siooc">Twitter</a><br>
+						<a href="https://www.linkedin.com/company/cioosatlantic/">LinkedIn</a><br>
+						<a href="mailto:info@cioosatlantic.ca">Contact Us</a><br>
 					</div>
 				</aside>
 			</div>
+
 			<div id="footer-col2" class="widget-area one_sixth">
 				<aside class="widget widget_text">
 					<h3 class="footer-widget-title">
