rework date fields in temples
remove template extent from date block at top of page in favour of grouping temporal extent with other extent fields lower down.

--- a/ckanext/cioos_theme/templates/package/snippets/additional_info.html
+++ b/ckanext/cioos_theme/templates/package/snippets/additional_info.html
@@ -1,3 +1,4 @@
+{# if using the scheming extension this file is not used. instead see scheming/package/snippets/additional_info.html #}
 <section class="additional-info">
   <h3>{{ _('Additional Info') }}</h3>
   <table class="table table-striped table-bordered table-condensed">
@@ -59,32 +60,17 @@
           </tr>
         {% endif %}
 
-        {#
-          {% if pkg_dict.metadata_modified %}
-            <tr>
-              <th scope="row" class="dataset-label">{{ _("Last Updated") }}</th>
-              <td class="dataset-details">
-                  {% snippet 'snippets/local_friendly_datetime.html', datetime_obj=pkg_dict.metadata_modified %}
-              </td>
-            </tr>
-          {% endif %}
-          {% if pkg_dict.metadata_created %}
-            <tr>
-              <th scope="row" class="dataset-label">{{ _("Created") }}</th>
-
-              <td class="dataset-details">
-                  {% snippet 'snippets/local_friendly_datetime.html', datetime_obj=pkg_dict.metadata_created %}
-              </td>
-            </tr>
-          {% endif %}
-        #}
-
         {% block extras scoped %}
 
-          {% set items_to_skip = ['graphic-preview-description', 'coupled-resource', 'graphic-preview-type', 'spatial_harvester',
-              'bbox-east-long', 'bbox-north-lat', 'bbox-south-lat', 'bbox-west-long', 'spatial', 'temporal-extent-begin' ,'temporal-extent-end',
-              'metadata-date', 'dataset-reference-date', 'frequency-of-update', 'graphic-preview-file', 'licence', 'access_constraints',
-		          'guid','h_job_id','h_object_id','h_source_id','h_source_title','h_source_url','gn_localized_url','gn_view_metadata_url'] %}
+          {% set items_to_skip = ['graphic-preview-description', 'coupled-resource',
+              'graphic-preview-type', 'spatial_harvester', 'bbox-east-long',
+              'bbox-north-lat', 'bbox-south-lat', 'bbox-west-long', 'spatial',
+              'temporal-extent-begin' ,'temporal-extent-end',
+              'metadata-date', 'dataset-reference-date', 'frequency-of-update',
+              'graphic-preview-file', 'licence', 'access_constraints', 'guid',
+              'h_job_id', 'h_object_id', 'h_source_id', 'h_source_title',
+              'h_source_url', 'gn_localized_url', 'gn_view_metadata_url',
+              'metadata-reference-date'] %}
 
           {% for extra in h.sorted_extras(pkg_dict.extras) %}
             {% set key, value = extra %}
@@ -96,7 +82,7 @@
                     <tr rel="dc:relation" resource="_:extra{{ i }}">
                       <th scope="row" class="dataset-label" property="rdfs:label">{{ _(key.replace("-", " ").title()) }}</th>
                       <td class="dataset-details" property="rdf:value">
-			{{ h.get_responsible_party(value) }}
+                        {{ h.get_responsible_party(value) }}
                       </td>
                     </tr>
             {% elif _('spatial') == key%}
