--- a/ckanext/cioos_theme/templates/package/snippets/package_citation.html
+++ b/ckanext/cioos_theme/templates/package/snippets/package_citation.html
@@ -76,16 +76,32 @@ Renders a citation for a package
   <script>
     const Cite = require('citation-js');
 
+    function parseHtmlEnteties(str) {
+        return str.replace(/&#([0-9]{1,3});/gi, function(match, numStr) {
+            var num = parseInt(numStr, 10); // read num as normal number
+            return String.fromCharCode(num);
+        });
+    }
+
     async function loadCite(template_style = 'apa', output_type = 'html', cite_format = 'bibliography', download = false){
-      let pkg_citation = '{{ h.scheming_language_text(pkg_dict.get('citation'))|replace('\n','')|replace('\r','') }}'
+      let pkg_citation = `{{h.scheming_language_text(pkg_dict.get('citation'))|replace('\\n',' ')|replace('\\r',' ')}}`
+      pkg_citation = parseHtmlEnteties(pkg_citation)
+
       let cite_data = await Cite.async(pkg_citation)
 
-      let output = cite_data.format(cite_format, {
+      let output_options = {
         format: output_type,
         type: output_type,
         template: template_style,
         lang: 'en-US'
-      })
+      }
+
+      let output = cite_data.format(cite_format, output_options)
+
+      if (typeof output === 'object'){
+        output = Object.values(output)[0]
+      }
+
       if(download == false){
         document.getElementById("cite_output").innerHTML=output;
       }else{
