--- a/ckanext/cioos_theme/templates/package/read.html
+++ b/ckanext/cioos_theme/templates/package/read.html
@@ -56,8 +56,8 @@
   {% endblock %}
 
   {% block package_citation %}
-    {% if pkg.doi %}
-      {% snippet "doi/snippets/package_citation.html", pkg_dict=pkg %}
+    {% if pkg.citation %}
+      {% snippet "package/snippets/package_citation.html", pkg_dict=pkg %}
     {% endif %}
   {% endblock %}
 
