--- a/ckanext/cioos_theme/templates/home/layout3.html
+++ b/ckanext/cioos_theme/templates/home/layout3.html
@@ -25,22 +25,9 @@
 <div role="main">
   <div class="container">
     <h3 class="heading">{{ _("SEARCH BY LOCATION") }}</h3>
+    <p> To perform a spatial search, define your search area using the draw tool</p>
     <div class="box">
-      <section id="dataset-map" class="module module-narrow module-shallow">
-        <h2 class="module-heading">
-          {{ _('To perform a spatial search, define your search area using the draw tool') }}
-          <a href="{{ h.remove_url_param(['ext_bbox','ext_prev_extent', 'ext_location'], alternative_url=alternative_url) }}" class="action">{{ _('Clear') }}</a>
-        </h2>
-        {% set map_config = h.get_common_map_config() %}
-        <div class="dataset-map" data-module="spatial-query" data-default_extent="{{ default_extent }}" data-module-map_config="{{ h.dump_json(map_config) }}" data-module-spatial_widget_expands="{{ h.spatial_widget_expands()}}">
-          <div id="dataset-map-container"></div>
-        </div>
-        <div id="dataset-map-attribution">
-          {% snippet "spatial/snippets/map_attribution.html", map_config=map_config %}
-        </div>
-      </section>
-
-      {% resource 'ckanext-spatial/spatial_query' %}
+  	  {% snippet "spatial/snippets/spatial_query.html" , default_extent= h.spatial_default_extent() %}
   	</div>
   </div>
 </div>
