--- a/ckanext/cioos_theme/templates/scheming/display_snippets/composite_repeating.html
+++ b/ckanext/cioos_theme/templates/scheming/display_snippets/composite_repeating.html
@@ -10,27 +10,22 @@
           {% if composite_dict[key]|length > 0 %}
              {% if choices_dict[key]|length > 0  %}
                 {% if h.composite_is_list(composite_dict[key])  %}
-                    {%- set labels = [] -%}
-                    {% for item in composite_dict[key] %}
-      					{%- do labels.append(h.scheming_choices_label(choices_dict[key], item)) -%}
-                 	{% endfor %}
+                  {%- set labels = [] -%}
+                  {% for item in composite_dict[key] %}
+    					         {%- do labels.append(h.scheming_choices_label(choices_dict[key], item)) -%}
+               	  {% endfor %}
                  	{% set value = h.composite_join_list(labels) %}
-             	{% else %}
+             	  {% else %}
                  	{% set value = h.scheming_choices_label(choices_dict[key], composite_dict[key]) %}
-             	{% endif %}
+             	  {% endif %}
              {% else %}
                 {% set value = composite_dict[key] %}
              {% endif %}
-             {% if first_key_written %}&nbsp{% endif %}<b>{{ label_dict[key] }}:</b>
-             {% set first_key_written = true %}
-             {#{% if h.composite_is_mail(value|string) %}
-               {{ value.split('@')[0] }}<span style="display:none">foo</span>(at){{ value.split('@')[1] }}
-             {% else %}#}
-               {{ value.replace('(&#8224;)', '') }}
+             {% if not (loop.first or (loop.index == 2 and composite_dict[loop.previtem]|length == 0)) %}<br>{% endif %}<b>{{ label_dict[key] }}:</b>
+               {{ value.replace('(&#8224;)', '')|trim }}
                {% if '(&#8224;)' in value %}
                    (&#8224;)
                {% endif %}
-             {#{% endif %}#}
           {% endif %}
       {% endfor %}
        </li>
