update background img path

--- a/ckanext/cioos_theme/public/cioos_atlantic.scss
+++ b/ckanext/cioos_theme/public/cioos_atlantic.scss
@@ -1,7 +1,7 @@
 //--  Atlantic --//
 $primary-color: #e55162;
 $secondary-color: #e55162;
-$header-footer-bg-img: url(https://dev.cioosatlantic.ca/wp-content/uploads/background-colour.jpg);
+$header-footer-bg-img: url(/base/images/atlantic-background-colour.jpg);
 
 //--  National --//
 // $primary-color: #52a79b;
