--- a/ckanext/cioos_theme/templates/base.html
+++ b/ckanext/cioos_theme/templates/base.html
@@ -30,7 +30,10 @@
     {% endblock -%}
 
     {%- block styles %}
-      {% resource g.main_css[6:] %}
+      {# TODO: store just name of asset instead of path to it. #}
+      {% set main_css = h.get_rtl_css() if h.is_rtl_language() else g.main_css %}
+      {# strip '/base/' prefix and '.css' suffix #}
+      {% asset main_css[6:-4] %}
       <link rel="stylesheet" type="text/css" href="{{h.url_for_static('/cioos_theme.css')}}" />
       {% if h.cioos_get_additional_css_path() %}
       <link rel="stylesheet" type="text/css" href="{{h.url_for_static(h.cioos_get_additional_css_path())}}" />
@@ -43,6 +46,8 @@
       {{ g.template_head_end | safe }}
     {% endblock %}
 
+    {# render all assets included in styles block #}
+    {{ h.render_assets('style') }}
     {%- block custom_styles %}
       {%- if g.site_custom_css -%}
       <style>
@@ -55,11 +60,16 @@
 
     {%- block page %}{% endblock -%}
 
-    {%- block scripts %}{% endblock -%}
+    {%- block scripts %}
+    {% endblock -%}
     {% block body_extras -%}
       {# defined in the config.ini under "ckan.template_footer_end" #}
       {{ g.template_footer_end | safe }}
     {%- endblock %}
-  </body>
 
+    {# render all assets included in scripts block and everywhere else #}
+    {# make sure there are no calls to `asset` tag after this point #}
+    {{ h.render_assets('style') }}
+    {{ h.render_assets('script') }}
+  </body>
 </html>
