--- a/ckanext/cioos_theme/templates/home/layout4.html
+++ b/ckanext/cioos_theme/templates/home/layout4.html
@@ -3,7 +3,7 @@
     <div class="row row1">
       <div class="col-md-12 col1 centertext title module-content-end">
         <h1>{{ _('<span>CIOOS</span> Data Catalogue') }}</h1>
-        <h2>{{ _('Search, find, download — all of our') }} <span><a href="{{ h.url_for(controller='package', action='search') }}">{{h.cioos_count_datasets()}}</a></span> {{ _('datasets') }}.</h2>
+        <h2>{{ _('Search, find, download — all of our') }} <span><a href="{{ h.url_for(controller='dataset', action='search') }}">{{h.cioos_count_datasets()}}</a></span> {{ _('datasets') }}.</h2>
         <!-- old block -->
         {# block promoted #}
         {# snippet 'home/snippets/promoted.html' #}
@@ -25,7 +25,7 @@
           <ul class="media-grid" data-module="media-grid">
             {% for item in list %}
             {% if item.name not in g.exclude_eov %}
-            {% set href = h.url_for(controller='package', action='search', eov=item.name) %}
+            {% set href = h.url_for(controller='dataset', action='search', eov=item.name) %}
             {% set label = label_function(item) if label_function else item.display_name %}
             {% set label = _(label) %}
             {% set label_truncated = h.truncate(label, 18) if not label_function else label %}
