--- a/ckanext/cioos_theme/templates/base.html
+++ b/ckanext/cioos_theme/templates/base.html
@@ -34,20 +34,22 @@
       {% set main_css = h.get_rtl_css() if h.is_rtl_language() else g.main_css %}
       {# strip '/base/' prefix and '.css' suffix #}
       {% asset main_css[6:-4] %}
-      <link rel="stylesheet" type="text/css" href="{{h.url_for_static('/cioos_theme.css')}}" />
-      {% if h.cioos_get_additional_css_path() %}
-      <link rel="stylesheet" type="text/css" href="{{h.url_for_static(h.cioos_get_additional_css_path())}}" />
-      {% endif %}
-      <link href="https://fonts.googleapis.com/css?family=Montserrat:400,600,700,800,900|Quicksand:300,400,600|PT+Sans:400|Raleway:400&display=swap" rel="stylesheet">
     {% endblock %}
+
+    {# render all assets included in styles block #}
+    {{ h.render_assets('style') }}
+
+    <link rel="stylesheet" type="text/css" href="{{h.url_for_static('/cioos_theme.css')}}" />
+    {% if h.cioos_get_additional_css_path() %}
+    <link rel="stylesheet" type="text/css" href="{{h.url_for_static(h.cioos_get_additional_css_path())}}" />
+    {% endif %}
+    {# <link href="https://fonts.googleapis.com/css?family=Montserrat:400,600,700,800,900|Quicksand:300,400,600|PT+Sans:400|Raleway:400&display=swap" rel="stylesheet"> #}
 
     {% block head_extras %}
       {# defined in the config.ini under "ckan.template_head_end" #}
       {{ g.template_head_end | safe }}
     {% endblock %}
 
-    {# render all assets included in styles block #}
-    {{ h.render_assets('style') }}
     {%- block custom_styles %}
       {%- if g.site_custom_css -%}
       <style>
@@ -56,6 +58,7 @@
       {%- endif %}
     {% endblock %}
   </head>
+
   <body {% block bodytag %} data-site-root="{{ h.url_for('/', locale='default', qualified=true) }}" data-locale-root="{{ h.url_for('/', qualified=true) }}" {% endblock %}>
 
     {%- block page %}{% endblock -%}
