--- a/ckanext/cioos_theme/templates/home/layout4.bak.html
+++ b/ckanext/cioos_theme/templates/home/layout4.bak.html
@@ -18,7 +18,7 @@
           <h4>{{grouper}}</h4>
           <ul class="media-grid" data-module="media-grid">
             {% for item in list %}
-            {% set href = h.url_for(controller='package', action='search', eov=item.name) %}
+            {% set href = h.url_for(controller='dataset', action='search', eov=item.name) %}
             {% set label = label_function(item) if label_function else item.display_name %}
             {% set label_truncated = h.truncate(label, 22) if not label_function else label %}
             {% set count = count_label(item['count']) if count_label else ('%d' % item['count']) %}
