--- a/ckanext/cioos_theme/templates/home/snippets/search.html
+++ b/ckanext/cioos_theme/templates/home/snippets/search.html
@@ -3,7 +3,7 @@
 
 <h3 class="heading">{{ _("SEARCH BY KEYWORD") }}</h3>
 <div class="module-content box">
-  <form class="search-form" method="get" action="{% url_for controller='package', action='search' %}">
+  <form class="search-form" method="get" action="{% url_for controller='dataset', action='search' %}">
     <div class="col-md-3 col1"></div>
     <div class="col-md-6 col2 search-input form-group search-giant">
       <input aria-label="{% block header_site_search_label %}{{ _('Search datasets') }}{% endblock %}" id="field-main-search" type="text" class="form-control" name="q" value="" autocomplete="off" placeholder="{% block search_placeholder %}{{ placeholder }}{% endblock %}" />
