--- a/ckanext/cioos_theme/templates/package/base.html
+++ b/ckanext/cioos_theme/templates/package/base.html
@@ -12,14 +12,14 @@
     {% if pkg.organization and g.hide_organization_in_breadcrumb.lower()|default('', 'false')  != 'true' %}
       {% set organization = h.get_translated(pkg.organization, 'title') or pkg.organization.name %}
       {% set group_type = pkg.organization.type %}
-      <li>{% link_for _('Organizations'), controller='organization', action='index', named_route=group_type + '_index' %}</li>
-      <li>{% link_for organization|truncate(30), controller='organization', action='read', id=pkg.organization.name, named_route=group_type + '_read' %}</li>
+      <li>{% link_for _('Organizations'), named_route=group_type + '.index' %}</li>
+      <li>{% link_for organization|truncate(30), id=pkg.organization.name, named_route=group_type + '.read' %}</li>
     {% else %}
-      <li>{% link_for _('Datasets'), controller='package', action='search' %}</li>
+      <li>{% link_for _('Datasets'), controller='dataset', action='search' %}</li>
     {% endif %}
-    <li{{ self.breadcrumb_content_selected() }}>{% link_for dataset|truncate(30), controller='package', action='read', id=pkg.name %}</li>
+    <li{{ self.breadcrumb_content_selected() }}>{% link_for dataset|truncate(30), controller='dataset', action='read', id=pkg.name %}</li>
   {% else %}
-    <li>{% link_for _('Datasets'), controller='package', action='search' %}</li>
+    <li>{% link_for _('Datasets'), controller='dataset', action='search' %}</li>
     <li class="active"><a href="">{{ _('Create Dataset') }}</a></li>
   {% endif %}
 {% endblock %}
