--- a/ckanext/cioos_theme/templates/package/snippets/metadata_source.html
+++ b/ckanext/cioos_theme/templates/package/snippets/metadata_source.html
@@ -56,7 +56,7 @@
           {% endif %}
           {% if source_id %}
           <p style="margin-left:20px;margin-bottom: 0px;">
-            <span> {{ _("Other records harvested from") }} </span><a href="{{h.url_for('harvest_read', id = source_id)}}">{{ title }}</a>
+            <span> {{ _("Other records harvested from") }} </span><a href="{{h.url_for('harvest.read', id = source_id)}}">{{ title }}</a>
           </p>
           {% endif %}
 
