--- a/ckanext/cioos_theme/templates/snippets/tag_list.html
+++ b/ckanext/cioos_theme/templates/snippets/tag_list.html
@@ -14,7 +14,7 @@ tags: list of tags
           {% set name = tag.name %}
           {% set display_name = tag.display_name %}
         {% endif %}
-        <a class="{% block tag_list_item_class %}tag{% endblock %}" href="{% url_for controller='package', action='search', tags=name %}">{{ h.truncate(display_name, 22) }}</a>
+        <a class="{% block tag_list_item_class %}tag{% endblock %}" href="{% url_for controller='dataset', action='search', tags=name %}">{{ h.truncate(display_name, 22) }}</a>
       </li>
     {% endfor %}
   </ul>
