fix some issues with datacite xml output

--- a/ckanext/cioos_theme/templates/schemamap.html
+++ b/ckanext/cioos_theme/templates/schemamap.html
@@ -3,7 +3,7 @@
 {% block subtitle %}{{ _('Schema Map') }}{% endblock %}
 
 {% block breadcrumb_content %}
-  <li class="active">{% link_for _('Schema Map'), controller='ckanext.cioos_theme.plugin:CIOOSController', action='schemamap' %}</li>
+  <li class="active">{{ h.link_to( _('Schema Map'), h.url_for('cioos_theme.schemamap')) }}</li>
 {% endblock %}
 
 {% block primary %}
