--- a/ckanext/cioos_theme/templates/package/datacite.html
+++ b/ckanext/cioos_theme/templates/package/datacite.html
@@ -1,10 +1,11 @@
 {% extends "page.html" %}
 
 {% set pkg = c.pkg_dict or pkg_dict %}
-{% block subtitle %}{{ _('Schema Map') }}{% endblock %}
+{% set dc = h.cioos_generate_datacite_dict(pkg) %}
+{% block subtitle %}{{ _('DataCite XML') }}{% endblock %}
 
 {% block breadcrumb_content %}
-<li class="active">{% link_for _('Schema Map'), controller='ckanext.cioos_theme.plugin:CIOOSController', action='schemamap' %}</li>
+<li class="active">{{ h.link_to( _('DataCite'), h.url_for('cioos_theme.datacite_xml', id=pkg['id'])) }}</li>
 {% endblock %}
 
 {% block primary %}
@@ -25,7 +26,7 @@
         </tr>
         <tr>
           <th>URL:</th>
-          <td>{{h.url_for(controller='package', action='read', id=pkg['name'], _external=True)}}</td>
+          <td>{{h.url_for(controller='dataset', action='read', id=pkg['name'], _external=True)}}</td>
         </tr>
         {% if h.cioos_get_datacite_test_mode() == 'True' %}
         <tr>
@@ -58,65 +59,96 @@
     {% if doi -%}
     <identifier identifierType="DOI">10.5072/example-full</identifier>
     {%- endif -%}
+
     <creators>
-      {%- for party in h.cioos_load_json(pkg['cited-responsible-party']) -%}
-        {%- if party['individual-name'] -%}
+      {%- for party in dc['creators'] %}
         <creator>
-          {% set names = party['individual-name'].split(' ') %}
+          {% set names = party['individual-name'].split(' ') -%}
           <creatorName nameType="Personal">{{ names[-1], ' '.join(names[:-1]) }}</creatorName>
           <givenName>{{ ' '.join(names[:-1]) }}</givenName>
           <familyName>{{ names[-1] }}</familyName>
+          {%- if party['organisation-name'] %}
+          <affiliation>{{party['organisation-name']}}</affiliation>
+          {%- endif %}
         </creator>
-        {%- endif -%}
-      {%- endfor -%}
+      {%- endfor %}
     </creators>
+
+    {%- if dc['distributor'] %}
+    <contributors>
+      {%- for party in dc['distributor'] %}
+      {%- if party['individual-name'] -%}
+      {% set names = party['individual-name'].split(' ') %}
+      <contributor contributorType="Distributor">
+        <contributorName nameType="Personal">{{ names[-1], ' '.join(names[:-1]) }}</contributorName>
+        <givenName>{{ ' '.join(names[:-1]) }}</givenName>
+        <familyName>{{ names[-1] }}</familyName>
+        {%- if party['organisation-name'] %}
+        <affiliation>{{party['organisation-name']}}</affiliation>
+        {%- endif %}
+      </contributor>
+      {%- elif party['organisation-name'] -%}
+      <contributor contributorType="Distributor">
+        <contributorName xml:lang="en" nameType="Organizational">{{party['organisation-name']}}</contributorName>
+      </contributor>
+      {%- endif -%}
+      {%- endfor %}
+    </contributors>
+    {%- endif %}
+
     <titles>
-      <title xml:lang="en">{{ pkg['title_translated']['en'] }}</title>
-      <title xml:lang="fr">{{ pkg['title_translated']['fr'] }}</title>
+      <title xml:lang="en">{{ dc['title_en'] }}</title>
+      <title xml:lang="fr">{{ dc['title_fr'] }}</title>
     </titles>
-    {%- for party in h.cioos_load_json(pkg['cited-responsible-party']) -%}
-      {% if party['role'] == 'publisher' %}
-    <publisher>party['organization-name']</publisher>
-      {% endif %}
+
+    {% for party in dc['publishers'] -%}
+    <publisher>{{party}}</publisher>
     {%- endfor -%}
 
-    {%- for date in h.cioos_load_json(pkg['dataset-reference-date']) -%}
-      {% if date['type'] == 'publication' %}
+    {%- for date in dc['publicationDates'] -%}
     <publicationYear>{{ date['value'] }}</publicationYear>
-      {% endif %}
     {%- endfor -%}
+
     <subjects>
-      {%- for kw in pkg['keywords']['en'] %}
+      {%- for kw in dc['keywords_en'] %}
       <subject xml:lang="en">{{ kw }}</subject>
       {%- endfor %}
-      {%- for kw in pkg['keywords']['fr'] %}
+      {%- for kw in dc['keywords_fr'] %}
       <subject xml:lang="fr">{{ kw }}</subject>
       {%- endfor %}
     </subjects>
-    <language>{{ pkg['metadata-language'] }}</language>
-    <resourceType resourceTypeGeneral="{{ pkg['resource-type'].title() }}">{{ pkg['resource-type'].title() }}</resourceType>
-    <version>{{pkg['version'] or '1.0' }}</version>
+
+    <language>{{ dc['metadata-language'] }}</language>
+    <resourceType resourceTypeGeneral="{{ dc['resource-type'] }}">{{ dc['resource-type'] }}</resourceType>
+    <version>{{dc['version']}}</version>
+
+    {% if dc['license'] -%}
+    <rightsList>
+      <rights xml:lang="en-US" schemeURI="https://spdx.org/licenses/" rightsIdentifierScheme="SPDX" rightsIdentifier="{{dc['license']['id']}}" rightsURI="{{dc['license']['url']}}"/>
+    </rightsList>
+    {%- endif %}
+
     <descriptions>
       <description xml:lang="en" descriptionType="Abstract">
-        {{ pkg['notes_translated']['en'] }}
+        {{ dc['description_en'] }}
       </description>
       <description xml:lang="fr" descriptionType="Abstract">
-        {{ pkg['notes_translated']['fr'] }}
+        {{ dc['description_fr'] }}
       </description>
     </descriptions>
 
     <geoLocations>
       <geoLocation>
         <geoLocationBox>
-          <westBoundLongitude>{{pkg['bbox-west-long']}}</westBoundLongitude>
-          <eastBoundLongitude>{{pkg['bbox-east-long']}}</eastBoundLongitude>
-          <southBoundLatitude>{{pkg['bbox-south-lat']}}</southBoundLatitude>
-          <northBoundLatitude>{{pkg['bbox-north-lat']}}</northBoundLatitude>
+          <westBoundLongitude>{{dc['bbox']['west']}}</westBoundLongitude>
+          <eastBoundLongitude>{{dc['bbox']['east']}}</eastBoundLongitude>
+          <southBoundLatitude>{{dc['bbox']['south']}}</southBoundLatitude>
+          <northBoundLatitude>{{dc['bbox']['north']}}</northBoundLatitude>
         </geoLocationBox>
-        {% set spatial = h.cioos_load_json(pkg['spatial']) %}
+        {%- set spatial =dc['spatial'] -%}
         {%- if  spatial and spatial['type'] == 'Polygon' %}
         <geoLocationPolygon>
-          {%- for coord in spatial['coordinates'][0] %}
+          {%- for coord in spatial['coords'] %}
           <polygonPoint>
             <pointLatitude>{{coord[1]}}</pointLatitude>
             <pointLongitude>{{coord[0]}}</pointLongitude>
